# helen-data-collector

./: .dockerignore  .gitignore  Dockerfile  HELEN_API.md  README.md  docker-compose.yml  grafana_dashboard.json  install.sh
.agents/workflows/: local-testing.md
.github/workflows/: docker-build.yml
backend/: Cargo.toml  credentials.json.example  influx_config.json  influx_config.json.example
backend/src/: helen_client.rs  influx.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConsumptionChart.tsx  LoginForm.tsx  PlanInfo.tsx  Settings.tsx
